--- a/AnagaramJS/style.css
+++ b/AnagaramJS/style.css
@@ -71,11 +71,19 @@ HTML elements
   cursor: pointer;
 }
 
-.wrapper .anagram .prikazi h3 {
+.wrapper .anagram .prikazi p {
   position: absolute;
   top: 0;
   margin-top: 100px;
+  font-weight: bold;
 }
 .footer {
   margin-top: 300px;
+}
+@media (max-width: 900px) {
+ body{
+  width: 900px;
+  margin-left: auto;
+  margin-right: auto;
+ }
 }
